--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h2>Hello World!</h2>
     <p>This is my first git repo</p>
-    <h1>This is heading</h1>
+    <!-- <h1>This is heading</h1> -->
 </body>
 </html>
